--- a/inclassassignment.ipynb
+++ b/inclassassignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPjjUcUdMjrxlOc3nJFmeHs",
+      "authorship_tag": "ABX9TyMa51GDrgk0u9x53H4M5GzW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "HBaALrKIAQJG",
-        "outputId": "2e350505-c8ca-42ad-831e-2b2eb470ecec"
+        "outputId": "4e5fa6af-320b-41c0-dc28-f44e35e4bbde"
       },
       "outputs": [
         {
@@ -42,7 +42,7 @@
           "name": "stdout",
           "text": [
             "Enter Sales ($): 12000\n",
-            "Enter Tax Rate (%): 0.3\n",
+            "Enter Tax Rate (%): 30\n",
             "Sales: 12000.0$\n",
             "Cost of Goods Sold: 4800.0$\n",
             "Gross Profit: 7200.0$\n",
@@ -57,7 +57,7 @@
         "\n",
         "cogs = sales * 0.4\n",
         "gross_profit = sales - cogs\n",
-        "taxes = rate * gross_profit\n",
+        "taxes = rate * gross_profit / 100\n",
         "net = gross_profit - taxes\n",
         "\n",
         "print(f\"Sales: {sales}$\")\n",
