--- a/inclassassignment.ipynb
+++ b/inclassassignment.ipynb
@@ -95,10 +95,25 @@
         "print(f\"Result: {res}\")"
       ],
       "metadata": {
-        "id": "HO79ApxMzOOF"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HO79ApxMzOOF",
+        "outputId": "28052b7f-78f1-4b57-8fa1-1a660c820909"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter first number: 2\n",
+            "Enter second number: 3\n",
+            "Choose numerical operator: +\n",
+            "Result: 5.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
