--- a/inclassassignment.ipynb
+++ b/inclassassignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVx9kEzfsB66fyginR9AzH",
+      "authorship_tag": "ABX9TyPvPrB3s5XI0wB9ombRUVBC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -101,7 +101,7 @@
         "id": "HO79ApxMzOOF",
         "outputId": "28052b7f-78f1-4b57-8fa1-1a660c820909"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,6 +111,220 @@
             "Enter second number: 3\n",
             "Choose numerical operator: +\n",
             "Result: 5.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for hour in range(1, 9):\n",
+        "  fee = 5 + 2.5 * hour\n",
+        "  if fee < 10:\n",
+        "    fee = 10.0\n",
+        "  elif fee > 20:\n",
+        "    fee = 20.0\n",
+        "  print(hour, fee)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PrWI49132G5S",
+        "outputId": "7567991e-ba1f-4cd5-cdb9-d8d1960c7472"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 10.0\n",
+            "2 10.0\n",
+            "3 12.5\n",
+            "4 15.0\n",
+            "5 17.5\n",
+            "6 20.0\n",
+            "7 20.0\n",
+            "8 20.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "ticket = 20\n",
+        "init_attendees = 20\n",
+        "fixed_cost = 200\n",
+        "\n",
+        "for ad in range (0, 201,25):\n",
+        "  revenue = (init_attendees + 2 * round(math.sqrt(ad))) * 10\n",
+        "  costs = fixed_cost + ad\n",
+        "  profit = revenue - costs\n",
+        "  print(ad, profit)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZlgACUwb7YWm",
+        "outputId": "f3327f73-594a-40d7-9c5c-a71802e0bfa2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 0\n",
+            "25 75\n",
+            "50 90\n",
+            "75 105\n",
+            "100 100\n",
+            "125 95\n",
+            "150 90\n",
+            "175 85\n",
+            "200 80\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hour = 1\n",
+        "while hour < 9:\n",
+        "    fee = 5 + 2.5 * hour\n",
+        "    if fee < 10:\n",
+        "        fee = 10.0\n",
+        "    elif fee > 20:\n",
+        "        fee = 20.0\n",
+        "\n",
+        "    print(hour, fee)\n",
+        "    hour += 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U_vgSgydMWCc",
+        "outputId": "08c4c61d-f0f9-4e9c-9d27-a46dbc54c732"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 10.0\n",
+            "2 10.0\n",
+            "3 12.5\n",
+            "4 15.0\n",
+            "5 17.5\n",
+            "6 20.0\n",
+            "7 20.0\n",
+            "8 20.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "ticket = 20\n",
+        "init_attendees = 20\n",
+        "fixed_cost = 200\n",
+        "\n",
+        "ad = 0\n",
+        "while ad < 201:\n",
+        "  revenue = (init_attendees + 2 * round(math.sqrt(ad))) * 10\n",
+        "  costs = fixed_cost + ad\n",
+        "  profit = revenue - costs\n",
+        "  print(ad, profit)\n",
+        "  ad += 25"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PN2TeG6tN6i-",
+        "outputId": "e6dc02ce-8820-4cf0-827a-f64dc58258e5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 0\n",
+            "25 75\n",
+            "50 90\n",
+            "75 105\n",
+            "100 100\n",
+            "125 95\n",
+            "150 90\n",
+            "175 85\n",
+            "200 80\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "play = input(\"Do you want to play? (y/n): \").lower()\n",
+        "\n",
+        "while play == \"y\":\n",
+        "  p_move = input(\"Choose between rock, paper, scissors: \").lower()\n",
+        "  c_move = random.choice(['rock', 'paper', 'scissors'])\n",
+        "\n",
+        "  print(f\"Player move: {p_move}\")\n",
+        "  print(f\"Computer move: {c_move}\")\n",
+        "\n",
+        "  if p_move == c_move:\n",
+        "    print(\"Draw\")\n",
+        "  elif (\n",
+        "      (p_move == \"rock\" and c_move == \"scissors\") or\n",
+        "      (p_move == \"scissors\" and c_move == \"paper\") or\n",
+        "      (p_move == \"paper\" and c_move == \"rock\")\n",
+        "  ):\n",
+        "    print(\"Player wins!\")\n",
+        "  else:\n",
+        "    print(\"Computer wins!\")\n",
+        "\n",
+        "  play = input(\"Do you want to play again? (y/n): \")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WE58G32s10Df",
+        "outputId": "6f24689e-c78e-492f-9ede-66390344235e"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Do you want to play? (y/n): y\n",
+            "Choose between rock, paper, scissors: rock\n",
+            "Player move: rock\n",
+            "Computer move: paper\n",
+            "Computer wins!\n",
+            "Do you want to play again? (y/n): y\n",
+            "Choose between rock, paper, scissors: rock\n",
+            "Player move: rock\n",
+            "Computer move: paper\n",
+            "Computer wins!\n",
+            "Do you want to play again? (y/n): n\n"
           ]
         }
       ]
